--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "my-app",
+  "name": "basic-cms-company",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
