--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"not op_mini all"
 	],
 	"devDependencies": {
-		"babel-eslint": "^10.0.1",
+		"babel-eslint": "9.0.0",
 		"eslint": "5.12.0",
 		"eslint-config-airbnb": "^17.1.0",
 		"eslint-plugin-import": "^2.14.0",
