Sets up password resetting
Shorter cooldown for redirect

Fixes all headers typo

Uses qs.stringify for verifyEmail due to x-www-form-urlencoded

Adds conditional rendering for statusText

Replaces inputs w/ Material UI TextFields

Removes unused input and switch styles

Adds bluebird depdendency

Updates Verification screen w/ Promise.delays and Circular Progress

Refactors setState()

Init React Context

Replaces Grid and Paper w/ CenterPaper

Applies early React slots

Removes redundant MUI styles

Puts in CenterPaper and tweaks

Replaces with InputForms

Adds new prop

Adds feedback text

Removes classnames and adds inflection

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
 	"dependencies": {
 		"@material-ui/core": "^3.9.3",
 		"axios": "^0.18.0",
-		"classnames": "^2.2.6",
+		"bluebird": "^3.5.4",
 		"formik": "^1.5.1",
+		"inflection": "^1.12.0",
 		"node-sass": "^4.11.0",
 		"prop-types": "^15.7.2",
 		"query-string": "^6.4.2",
