--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 		"query-string": "^6.4.2",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
+		"react-redux": "^7.0.1",
 		"react-router-dom": "^5.0.0",
 		"react-scripts": "2.1.8",
+		"redux": "^4.0.1",
 		"yup": "^0.27.0"
 	},
 	"scripts": {
