--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"bluebird": "^3.5.4",
 		"formik": "^1.5.1",
 		"inflection": "^1.12.0",
+		"multi-nprogress": "^0.3.3",
 		"node-sass": "^4.11.0",
 		"prop-types": "^15.7.2",
 		"query-string": "^6.4.2",
