--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,8 @@
 				"allowChildren": false
 			}
 		],
-		"react/prop-types": "off"
+		"react/prop-types": "off",
+		"no-console": "off",
+		"camelcase": "off"
 	}
 }
