--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"react-router-dom": "^5.0.0",
 		"react-scripts": "2.1.8",
 		"redux": "^4.0.1",
-		"redux-thunk": "^2.3.0",
+        "redux-thunk": "^2.3.0",
+        "react-toastify": "^5.1.0",
 		"yup": "^0.27.0"
 	},
 	"scripts": {
