--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-redux": "^7.0.1",
 		"react-router-dom": "^5.0.0",
 		"react-scripts": "2.1.8",
+		"react-table": "^6.10.0",
 		"react-toastify": "^5.1.0",
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0",
