--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-toastify": "^5.1.0",
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0",
+		"styled-components": "^4.2.0",
 		"yup": "^0.27.0"
 	},
 	"scripts": {
