--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
 		"no-console": "off",
 		"camelcase": "off",
 		"quotes": 0,
-		"no-underscore-dangle": "off"
+		"no-underscore-dangle": "off",
+		"no-shadow": "warn"
 	}
 }
