--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
 		"camelcase": "off",
 		"quotes": 0,
 		"no-underscore-dangle": "off",
-		"no-shadow": "warn"
+		"no-shadow": "warn",
+		"react/destructuring-assignment": "warn"
 	}
 }
