--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@material-ui/icons": "^3.0.2",
 		"axios": "^0.18.0",
 		"bluebird": "^3.5.4",
+		"classnames": "^2.2.6",
 		"formik": "^1.5.1",
 		"inflection": "^1.12.0",
 		"match-sorter": "^3.0.0",
