--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"classnames": "^2.2.6",
 		"formik": "^1.5.1",
 		"inflection": "^1.12.0",
+		"lodash": "^4.17.11",
 		"match-sorter": "^3.0.0",
 		"multi-nprogress": "^0.3.3",
 		"node-sass": "^4.11.0",
@@ -23,6 +24,7 @@
 		"react-scripts": "2.1.8",
 		"react-table": "^6.10.0",
 		"react-toastify": "^5.1.0",
+		"recharts": "^1.5.0",
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0",
 		"styled-components": "^4.2.0",
