--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
 		"@material-ui/core": "^3.9.3",
 		"@material-ui/icons": "^3.0.2",
 		"axios": "^0.18.0",
-		"bluebird": "^3.5.4",
-		"classnames": "^2.2.6",
 		"formik": "^1.5.1",
 		"inflection": "^1.12.0",
 		"lodash": "^4.17.11",
@@ -21,6 +19,7 @@
 		"react-redux": "^7.0.1",
 		"react-router-dom": "^5.0.0",
 		"react-scripts": "2.1.8",
+		"react-scroll": "^1.7.11",
 		"react-table": "^6.10.0",
 		"react-toastify": "^5.1.0",
 		"recharts": "^1.5.0",
