Init WeaponModal to show stats
Can save weapon to loadout

Hotfix a panel

--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
 		"no-underscore-dangle": "off",
 		"no-shadow": "warn",
 		"react/destructuring-assignment": "warn",
-		"one-var":"off"
+		"one-var":"off",
+		"react/jsx-boolean-value": "warn"
 	}
 }
