--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0",
 		"styled-components": "^4.2.0",
+		"uuid": "^3.3.2",
 		"yup": "^0.27.0"
 	},
 	"scripts": {
