Restructures Styles and adds Colors.js

--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,7 @@
 		"react/destructuring-assignment": "warn",
 		"one-var":"off",
 		"react/jsx-boolean-value": "warn",
-		"react/jsx-one-expression-per-line": "warn"
+		"react/jsx-one-expression-per-line": "warn",
+		"react/prefer-stateless-function": "warn",
 	}
 }
