--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 	"private": true,
 	"dependencies": {
 		"@material-ui/core": "^3.9.3",
-		"@material-ui/icons": "^3.0.2",
 		"axios": "^0.18.0",
 		"formik": "^1.5.1",
 		"inflection": "^1.12.0",
 		"lodash": "^4.17.11",
 		"match-sorter": "^3.0.0",
+		"material-design-icons-iconfont": "^5.0.1",
 		"multi-nprogress": "^0.3.3",
 		"node-sass": "^4.11.0",
 		"prop-types": "^15.7.2",
