Adds Equipment preview to ProfileModal
Adds resize event listender to trigger styles and some clean up

Increases loading user's loadouts by locally storing mh armors & weapons

Sets handleMediaQuery() on compDidMount

--- a/.eslintrc
+++ b/.eslintrc
@@ -41,6 +41,7 @@
 		"react/jsx-boolean-value": "warn",
 		"react/jsx-one-expression-per-line": "warn",
 		"react/prefer-stateless-function": "warn",
-		"linebreak-style": "warn"
+		"linebreak-style": "warn",
+		"react/no-unused-state": "warn"
 	}
 }
