--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"formik": "^1.5.1",
 		"inflection": "^1.12.0",
 		"lodash": "^4.17.11",
+		"logrocket": "^1.0.1",
 		"match-sorter": "^3.0.0",
 		"material-design-icons-iconfont": "^5.0.1",
 		"multi-nprogress": "^0.3.3",
