update: remove LogRocket

--- a/package.json
+++ b/package.json
@@ -1,60 +1,59 @@
 {
-	"name": "basic-cms-company",
-	"homepage": "https://github.com/do-kevin/basic-cms-company",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@material-ui/core": "^3.9.3",
-		"axios": "^0.19.0",
-		"eslint-plugin-import": "^2.17.3",
-		"eslint-plugin-jest": "^22.6.4",
-		"eslint-plugin-jsx-a11y": "^6.2.1",
-		"eslint-plugin-react": "^7.13.0",
-		"formik": "^1.5.1",
-		"inflection": "^1.12.0",
-		"lodash": "^4.17.11",
-		"logrocket": "^1.0.1",
-		"match-sorter": "^3.0.0",
-		"material-design-icons-iconfont": "^5.0.1",
-		"multi-nprogress": "^0.3.3",
-		"node-sass": "^4.11.0",
-		"prop-types": "^15.7.2",
-		"query-string": "^6.4.2",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6",
-		"react-redux": "^7.0.1",
-		"react-router-dom": "^5.0.0",
-		"react-scripts": "2.1.8",
-		"react-scroll": "^1.7.11",
-		"react-table": "^6.10.0",
-		"react-toastify": "^5.1.0",
-		"recharts": "^1.5.0",
-		"redux": "^4.0.1",
-		"redux-devtools-extension": "^2.13.8",
-		"redux-thunk": "^2.3.0",
-		"reselect": "^4.0.0",
-		"styled-components": "^4.2.0",
-		"uuid": "^3.3.2",
-		"yup": "^0.27.0"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"test:dumb": "react-scripts test --env=jsdom --verbose=false",
-		"eject": "react-scripts eject"
-	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	],
-	"devDependencies": {
-		"@testing-library/react": "^8.0.1",
-		"axios-mock-adapter": "^1.16.0",
-		"eslint": "5.12.0",
-		"eslint-config-airbnb": "^17.1.0",
-		"jest-dom": "^3.5.0"
-	}
+  "name": "monster-hunter-world-builder",
+  "homepage": "https://github.com/do-kevin/monster-hunter-world-builder",
+  "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "axios": "^0.19.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jest": "^22.6.4",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "formik": "^1.5.1",
+    "inflection": "^1.12.0",
+    "lodash": "^4.17.11",
+    "match-sorter": "^3.0.0",
+    "material-design-icons-iconfont": "^5.0.1",
+    "multi-nprogress": "^0.3.3",
+    "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.4.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.1",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-scroll": "^1.7.11",
+    "react-table": "^6.10.0",
+    "react-toastify": "^5.1.0",
+    "recharts": "^1.5.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "styled-components": "^4.2.0",
+    "uuid": "^3.3.2",
+    "yup": "^0.27.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "test:dumb": "react-scripts test --env=jsdom --verbose=false",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "@testing-library/react": "^8.0.1",
+    "axios-mock-adapter": "^1.16.0",
+    "eslint": "5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "jest-dom": "^3.5.0"
+  }
 }
