--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # dependencies
+
+web_modules
 /node_modules
 /.pnp
 .pnp.js
@@ -7,6 +9,7 @@
 /coverage
 
 # production
+.build
 /build
 
 # misc
@@ -16,7 +19,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
-linenote
 
 npm-debug.log*
 yarn-debug.log*
